<resources>
    <string name="app_name">cool-chat</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">This username is already exist</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="passwords_mismatch">Password mismatch</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_friends">Friends</string>
    <string name="title_chats">Chats</string>
    <string name="title_settings">Settings</string>
</resources>