<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_chats">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="ru.kazax.chat.ui.chats.ChatsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="ru.kazax.chat.ui.friends.FriendsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.kazax.chat.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>